// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Board All Cross 1`] = `
Array [
  <div
    className="status"
    data-e2e="status"
  >
    Winner: X
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-0"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      data-e2e="square-1"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      data-e2e="square-2"
      onClick={[Function]}
    >
      X
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-3"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      data-e2e="square-4"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      data-e2e="square-5"
      onClick={[Function]}
    >
      X
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-6"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      data-e2e="square-7"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      data-e2e="square-8"
      onClick={[Function]}
    >
      X
    </button>
  </div>,
]
`;

exports[`Storyshots Board All Round 1`] = `
Array [
  <div
    className="status"
    data-e2e="status"
  >
    Winner: O
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-0"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      data-e2e="square-1"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      data-e2e="square-2"
      onClick={[Function]}
    >
      O
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-3"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      data-e2e="square-4"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      data-e2e="square-5"
      onClick={[Function]}
    >
      O
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-6"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      data-e2e="square-7"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      data-e2e="square-8"
      onClick={[Function]}
    >
      O
    </button>
  </div>,
]
`;

exports[`Storyshots Board All Triangle 1`] = `
Array [
  <div
    className="status"
    data-e2e="status"
  >
    Winner: △
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-0"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      data-e2e="square-1"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      data-e2e="square-2"
      onClick={[Function]}
    >
      △
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-3"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      data-e2e="square-4"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      data-e2e="square-5"
      onClick={[Function]}
    >
      △
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-6"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      data-e2e="square-7"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      data-e2e="square-8"
      onClick={[Function]}
    >
      △
    </button>
  </div>,
]
`;

exports[`Storyshots Board Cross And Triangle 1`] = `
Array [
  <div
    className="status"
    data-e2e="status"
  >
    Draw!
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-0"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      data-e2e="square-1"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      data-e2e="square-2"
      onClick={[Function]}
    >
      X
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-3"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      data-e2e="square-4"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      data-e2e="square-5"
      onClick={[Function]}
    >
      △
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-6"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      data-e2e="square-7"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      data-e2e="square-8"
      onClick={[Function]}
    >
      △
    </button>
  </div>,
]
`;

exports[`Storyshots Board Empty 1`] = `
Array [
  <div
    className="status"
    data-e2e="status"
  >
    次のプレイヤー: X
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-0"
      onClick={[Function]}
    />
    <button
      className="square"
      data-e2e="square-1"
      onClick={[Function]}
    />
    <button
      className="square"
      data-e2e="square-2"
      onClick={[Function]}
    />
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-3"
      onClick={[Function]}
    />
    <button
      className="square"
      data-e2e="square-4"
      onClick={[Function]}
    />
    <button
      className="square"
      data-e2e="square-5"
      onClick={[Function]}
    />
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-6"
      onClick={[Function]}
    />
    <button
      className="square"
      data-e2e="square-7"
      onClick={[Function]}
    />
    <button
      className="square"
      data-e2e="square-8"
      onClick={[Function]}
    />
  </div>,
]
`;

exports[`Storyshots Board Round And Cross 1`] = `
Array [
  <div
    className="status"
    data-e2e="status"
  >
    Draw!
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-0"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      data-e2e="square-1"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      data-e2e="square-2"
      onClick={[Function]}
    >
      X
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-3"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      data-e2e="square-4"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      data-e2e="square-5"
      onClick={[Function]}
    >
      O
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-6"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      data-e2e="square-7"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      data-e2e="square-8"
      onClick={[Function]}
    >
      O
    </button>
  </div>,
]
`;

exports[`Storyshots Board Round And Cross And Triangle 1`] = `
Array [
  <div
    className="status"
    data-e2e="status"
  >
    Draw!
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-0"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      data-e2e="square-1"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      data-e2e="square-2"
      onClick={[Function]}
    >
      O
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-3"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      data-e2e="square-4"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      data-e2e="square-5"
      onClick={[Function]}
    >
      △
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-6"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      data-e2e="square-7"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      data-e2e="square-8"
      onClick={[Function]}
    >
      △
    </button>
  </div>,
]
`;

exports[`Storyshots Board Round And Triangle 1`] = `
Array [
  <div
    className="status"
    data-e2e="status"
  >
    Draw!
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-0"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      data-e2e="square-1"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      data-e2e="square-2"
      onClick={[Function]}
    >
      △
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-3"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      data-e2e="square-4"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      data-e2e="square-5"
      onClick={[Function]}
    >
      O
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      data-e2e="square-6"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      data-e2e="square-7"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      data-e2e="square-8"
      onClick={[Function]}
    >
      O
    </button>
  </div>,
]
`;

exports[`Storyshots Game Draw 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div
      className="status"
      data-e2e="status"
    >
      Draw!
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        data-e2e="square-0"
        onClick={[Function]}
      >
        X
      </button>
      <button
        className="square"
        data-e2e="square-1"
        onClick={[Function]}
      >
        O
      </button>
      <button
        className="square"
        data-e2e="square-2"
        onClick={[Function]}
      >
        X
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        data-e2e="square-3"
        onClick={[Function]}
      >
        X
      </button>
      <button
        className="square"
        data-e2e="square-4"
        onClick={[Function]}
      >
        O
      </button>
      <button
        className="square"
        data-e2e="square-5"
        onClick={[Function]}
      >
        O
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        data-e2e="square-6"
        onClick={[Function]}
      >
        O
      </button>
      <button
        className="square"
        data-e2e="square-7"
        onClick={[Function]}
      >
        X
      </button>
      <button
        className="square"
        data-e2e="square-8"
        onClick={[Function]}
      >
        X
      </button>
    </div>
  </div>
  <div
    className="game-info"
  >
    <ol>
      <li>
        <button
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #1
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #2
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #3
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #4
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #5
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #6
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #7
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #8
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Game Empty 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div
      className="status"
      data-e2e="status"
    >
      次のプレイヤー: X
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        data-e2e="square-0"
        onClick={[Function]}
      />
      <button
        className="square"
        data-e2e="square-1"
        onClick={[Function]}
      />
      <button
        className="square"
        data-e2e="square-2"
        onClick={[Function]}
      />
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        data-e2e="square-3"
        onClick={[Function]}
      />
      <button
        className="square"
        data-e2e="square-4"
        onClick={[Function]}
      />
      <button
        className="square"
        data-e2e="square-5"
        onClick={[Function]}
      />
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        data-e2e="square-6"
        onClick={[Function]}
      />
      <button
        className="square"
        data-e2e="square-7"
        onClick={[Function]}
      />
      <button
        className="square"
        data-e2e="square-8"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="game-info"
  >
    <ol />
  </div>
</div>
`;

exports[`Storyshots Game O Win 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div
      className="status"
      data-e2e="status"
    >
      Winner: O
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        data-e2e="square-0"
        onClick={[Function]}
      >
        X
      </button>
      <button
        className="square"
        data-e2e="square-1"
        onClick={[Function]}
      >
        X
      </button>
      <button
        className="square"
        data-e2e="square-2"
        onClick={[Function]}
      >
        O
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        data-e2e="square-3"
        onClick={[Function]}
      >
        X
      </button>
      <button
        className="square"
        data-e2e="square-4"
        onClick={[Function]}
      />
      <button
        className="square"
        data-e2e="square-5"
        onClick={[Function]}
      >
        O
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        data-e2e="square-6"
        onClick={[Function]}
      />
      <button
        className="square"
        data-e2e="square-7"
        onClick={[Function]}
      />
      <button
        className="square"
        data-e2e="square-8"
        onClick={[Function]}
      >
        O
      </button>
    </div>
  </div>
  <div
    className="game-info"
  >
    <ol>
      <li>
        <button
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #1
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #2
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #3
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #4
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #5
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Game X Win 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div
      className="status"
      data-e2e="status"
    >
      Winner: X
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        data-e2e="square-0"
        onClick={[Function]}
      >
        X
      </button>
      <button
        className="square"
        data-e2e="square-1"
        onClick={[Function]}
      />
      <button
        className="square"
        data-e2e="square-2"
        onClick={[Function]}
      >
        O
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        data-e2e="square-3"
        onClick={[Function]}
      >
        X
      </button>
      <button
        className="square"
        data-e2e="square-4"
        onClick={[Function]}
      />
      <button
        className="square"
        data-e2e="square-5"
        onClick={[Function]}
      >
        O
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="square"
        data-e2e="square-6"
        onClick={[Function]}
      >
        X
      </button>
      <button
        className="square"
        data-e2e="square-7"
        onClick={[Function]}
      />
      <button
        className="square"
        data-e2e="square-8"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="game-info"
  >
    <ol>
      <li>
        <button
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #1
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #2
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #3
        </button>
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          Go to move #4
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Square Empty 1`] = `
<button
  className="square"
  data-e2e="square-undefined"
/>
`;

exports[`Storyshots Square Selected By Circle 1`] = `
<button
  className="square"
  data-e2e="square-undefined"
>
  O
</button>
`;

exports[`Storyshots Square Selected By Cross 1`] = `
<button
  className="square"
  data-e2e="square-undefined"
>
  X
</button>
`;

exports[`Storyshots Square Selected By Triangle 1`] = `
<button
  className="square"
  data-e2e="square-undefined"
>
  △
</button>
`;
